--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 
 					<a href="https://web.telegram.org/" class="media"><span class="bi bi-telegram"></span></a>
 					<a href="https://github.com/AlishaBeg/" class="media"><span class="bi bi-github"></span></a>
-					<a href="https://www.linkedin.com/in/" class="media"><span class="bi bi-linkedin"></span></a>
+					<a href="https://www.linkedin.com/in/alishabeg/" class="media"><span class="bi bi-linkedin"></span></a>
 					
 				</div>
 
