--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 						CopyRight <a href="#" class="text-decoration-none px-"> Alisha Beg </a> &copy; All Right Reserved 
 					</div>
 					<div class="col-md-4 col-md-4 col-12 h6 py-2 text-md-right text-left">
-						Developed By <a href="https://mastermayank.w3spaces.com" class="text-decoration-none"> Mayank </a> 
+						Developed By <a href="https://mastermayank.w3spaces.com" target="_blank" class="text-decoration-none"> Mayank </a> 
 					</div>
 				</div>
 
